--- a/samples/tracker.html
+++ b/samples/tracker.html
@@ -74,7 +74,7 @@ function ol() {
 	timer = setInterval(update, 15);
 
 canvas.addEventListener('touchend', function() {
-	ctx.clearRect(0, 0, w, h);
+	//ctx.clearRect(0, 0, w, h);
 });
 
 canvas.addEventListener('touchmove', function(event) {
